# debrief-future

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  COMMS.md  CONSTITUTION.md  Makefile  README.md  STRATEGY.md  VISION.md  content.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
.claude/: settings.local.json
.claude/agents/: README.md
.claude/agents/backlog/: backlog-prioritizer.md  defector.md  (+2 more)
.claude/commands/: get-the-shot.md  idea.md  media.md  publish.md  speckit.implement.md  speckit.plan.md  speckit.pr.md  speckit.specify.md  speckit.start.md  speckit.tasks.md
.github/workflows/: build-demo-artifact.yml  python-lint.yml  schema-tests.yml  storybook.yml  test-demo.yml  vscode-extension.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/loader/: .env.example  .eslintrc.cjs  .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
apps/vscode/: .eslintrc.json  CHANGELOG.md  README.md  esbuild.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
demo/: 99-debrief-setup  Dockerfile  fly.toml
demo/samples/: example-track.rep
docs/: CLAUDE-media-agents.md  future-debrief-design-spec.md  future-debrief-mood-board.md  prd-speckit-ui-workflow.md  tracer-delivery-plan.md
docs/adr/: 001-feature-kind-discriminator.md
docs/ideas/: 003-shared-web-components.md  007-rep-special-comments.md  014-geojson-styling-properties.md  015-annotation-item-schemas.md  016-dynamic-blog-components.md
services/calc/: README.md  pyproject.toml
services/calc/debrief_calc/: __init__.py  exceptions.py  executor.py  models.py  provenance.py  registry.py  validation.py
services/calc/debrief_calc/mcp/: __init__.py  server.py
services/calc/debrief_calc/tools/: __init__.py  area_summary.py  range_bearing.py  track_stats.py
services/cli/: README.md  pyproject.toml
services/cli/debrief_cli/: __init__.py  catalog.py  main.py  output.py  tools.py  validate.py
services/config/: README.md  pyproject.toml
services/config/src/debrief_config/: __init__.py  core.py  exceptions.py  models.py  paths.py  storage.py  validation.py
services/config/tests/: conftest.py  test_core.py  test_integration.py  test_paths.py  test_preferences.py  test_validation.py
services/io/: README.md  pyproject.toml
services/io/src/debrief_io/: __init__.py  cli.py  exceptions.py  models.py  parser.py  registry.py  types.py
services/io/src/debrief_io/handlers/: __init__.py  base.py  rep.py
services/io/tests/: conftest.py  test_parser.py  test_registry.py  test_rep_handler.py
services/io/tests/fixtures/invalid/: bad_coordinates.rep  bad_timestamp.rep  truncated.rep
services/stac/: README.md  pyproject.toml
shared/components/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
shared/config-ts/: README.md  package-lock.json  package.json
shared/schemas/: Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
shared/schemas/scripts/: generate.py
shared/schemas/src/fixtures/invalid/: circle-annotation-missing-radius.json  line-annotation-missing-geometry.json  narrative-entry-missing-text.json  plot-metadata-missing-source.json  plot-metadata-missing-title.json  rectangle-annotation-invalid-kind.json  reference-location-invalid-type.json  reference-location-missing-name.json  sensor-contact-invalid-bearing.json  sensor-contact-missing-parent.json  text-annotation-missing-text.json  tool-metadata-invalid-version.json  tool-metadata-missing-context.json  track-feature-invalid-type.json  track-feature-missing-required.json  vector-annotation-missing-bearing.json
shared/schemas/src/fixtures/valid/: circle-annotation-valid-01.json  line-annotation-valid-01.json  narrative-entry-valid-01.json  narrative-entry-valid-02.json  plot-metadata-valid-01.json  plot-metadata-valid-02.json  rectangle-annotation-valid-01.json  reference-location-valid-01.json  reference-location-valid-02.json  sensor-contact-valid-01.json  sensor-contact-valid-02.json  text-annotation-valid-01.json  tool-metadata-valid-01.json  tool-metadata-valid-02.json  track-feature-valid-01.json  track-feature-valid-02.json  vector-annotation-valid-01.json
shared/schemas/src/linkml/: annotations.yaml  common.yaml  debrief.yaml  geojson.yaml  stac.yaml  tools.yaml
shared/schemas/tests/: test_golden.py  test_roundtrip.py  test_schema_compare.py  typescript-usage.ts  validate-jsonschema.js
specs/000-schemas/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-debrief-stac/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-shared-react-components/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-speckit-vscode-extension/: spec.md
specs/002-debrief-io/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-debrief-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-loader-mini-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-speckit-ui-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-chromeos-testing-setup/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-debrief-calc/: data-model.md  plan.md  prd-debrief-cli.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-debrief-calc/: spec.md
specs/006-speckit-vscode-extension/: data-model.md  plan.md  pr-instructions.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-dynamic-blog-components/: plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/calc/: __init__.py  test_exceptions.py  test_executor.py  test_mcp.py  test_metadata.py  test_models.py  test_provenance.py  test_registry.py
tests/cli/: __init__.py  test_catalog_commands.py  test_tools_commands.py  test_validate_command.py
tests/demo/: test_vnc_connect.py
(+311 files in other folders)
