[project]
name = "debrief"
version = "4.0.0"
description = "Debrief v4.x - Maritime tactical analysis platform"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "shared/schemas",
    "services/stac",
    "services/io",
    "services/config",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.uv.sources]
debrief-schemas = { workspace = true }
debrief-stac = { workspace = true }
debrief-io = { workspace = true }
debrief-config = { workspace = true }

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "pyinstaller>=6.18.0",
]
