[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debrief-calc"
version = "0.1.0"
description = "Context-sensitive analysis tools for Debrief maritime tactical analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Debrief Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["debrief_calc"]

[tool.pytest.ini_options]
testpaths = ["../../tests/calc"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
