[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debrief-cli"
version = "0.1.0"
description = "Command-line interface for Debrief maritime tactical analysis tools"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Debrief Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click>=8.0.0",
    "debrief-calc",
]

[project.scripts]
debrief-cli = "debrief_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["debrief_cli"]

[tool.pytest.ini_options]
testpaths = ["../../tests/cli"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
