[project]
name = "debrief-config"
version = "0.1.0"
description = "Shared configuration service for Debrief v4.x"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
    "filelock>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debrief_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
