[project]
name = "debrief-io"
version = "0.1.0"
description = "File parsing service for Debrief v4.x"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Debrief Team" }]
keywords = ["debrief", "parsing", "geojson", "maritime", "rep"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0",
    "debrief-schemas",
]

[project.scripts]
debrief-io = "debrief_io.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
mcp = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debrief_io"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Ruff config inherited from root ruff.toml

[tool.coverage.run]
source = ["src/debrief_io"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
